# research

./: .gitattributes  .gitignore  CLAUDE.md  CROSS-REF.md  README-index.md  README.md  ROADMAP.md  TIMELINE.md  ai-agent-rag-vla-arxiv-urls.md  ai-compiler-hardware-codesign-arxiv-urls.md  ai-ethics-fairness-governance-arxiv-urls.md  ai-for-science-arxiv-urls.md  ai-infra-operator-optimization-arxiv-urls.md  ai-math-theorem-proving-arxiv-urls.md  ai-safety-interpretability-arxiv-urls.md  diffusion-arxiv-urls.md  efficient-finetuning-merging-arxiv-urls.md  generative-models-arxiv-urls.md  llm-reasoning-rl-alignment-arxiv-urls.md  long-context-data-curation-arxiv-urls.md  multimodal-vlm-arxiv-urls.md  new-architectures-arxiv-urls.md  robotics-foundation-models-arxiv-urls.md  search-papers.sh  speech-audio-language-models-arxiv-urls.md  vae-representation-learning-arxiv-urls.md
.claude/: .fuse_hidden000014b300000001
docs/: MUST-READ-2026.md
landmark-experiments/: 01_transformer.py  02_lora.py  06_bert.py  12_ddpm.py  13_model_merging.py  14_distillation.py  15_clip.py  16_ppo.py  23_rag.py  24_kan.py  34_darts.py  (+19 more)
landmark-experiments/vae-experiments/: data  pyproject.toml  run_all.sh
landmark-experiments/vae-experiments/common/: data.py
landmark-experiments/vae-experiments/experiments/: 03_vq_vae.py
landmark-experiments/vae-experiments/results/01-vanilla-vae/checkpoints/: vanilla_vae_final.pt
landmark-experiments/vae-experiments/results/03-vq-vae/mnist/checkpoints/: vqvae_mnist.pt
landmark-experiments/vae-experiments/results/04-iwae/K=5/checkpoints/: iwae_K5.pt
(+325 files in other folders)
